--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.1
   flutter_riverpod: ^2.3.2
-  
+  path_provider: ^2.0.14
+  http: ^0.13.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
